kind/manifest/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: myapi
spec:
  host: "*"
  subsets:
    - name: v1
      labels:
        version: v1
    # - name: v2
    #   labels:
    #     version: v2
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapi
spec:
  hosts:
    - "*"
  gateways:
    - myapi-gateway
  http:
    - route:
        - destination:
            host: myapi
            subset: v1
            port:
              number: 8000
          weight: 90
        # - destination:
        #     host: myapi
        #     subset: v2
        #     port:
        #       number: 8000
        #   weight: 10
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myapi-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
